# VisionEngine

./: .gitignore  CMakeLists.txt  README.md
deploy/android/: README.md  build.gradle  local.properties  settings.gradle
deploy/android/app/: build.gradle
deploy/android/app/src/main/: AndroidManifest.xml
deploy/android/app/src/main/java/com/asher/faceengine/: CustomDialog.java  FaceKeyPoint.java  KeyPoint.java  LivingInfo.java  MainActivity.java  visionEngineNcnn.java
deploy/android/app/src/main/jni/: CMakeLists.txt  VisionEngineNcnn.cpp  ndkcamera.cpp  ndkcamera.h
deploy/android/app/src/main/res/layout/: main.xml
deploy/android/app/src/main/res/values/: strings.xml
examples/: test_classifier.cpp  test_classifier.mm  test_face.cpp  test_face.mm  test_object.cpp  test_object.mm  test_ocr.cpp  test_ocr.mm  test_pose.cpp  test_pose.mm  test_segment.cpp  test_segment.mm
include/win/opencv2/core/: utility.hpp
scripts/: strip_m.sh  strip_r.sh
scripts/android/: README.md  android_compile_batch.sh  compile_android_armv7.sh  compile_android_armv8a.sh  compile_android_x86.sh  compile_android_x86_64.sh  compile_batch.sh
scripts/ios/: README.md  compile_ios.sh  compile_macos.sh  generate_xcode.sh  install_perl_on_osx.sh  ios_compile_batch.sh  macos_compile_batch.sh
scripts/linux/: compile_ubuntu_1804.sh  linux_compile_batch.sh
scripts/win/: README.md  build_android.bat  build_vs2017.bat  build_vs2019.bat
src/: CMakeLists.txt  Info.plist
src/classifier/: ClassifierEngine.cpp  ClassifierEngine.h
src/classifier/classifier/: Classifier.cpp  Classifier.h
src/classifier/classifier/mobilenet/: Mobilenet.cpp  Mobilenet.h
src/classifier/classifier/squeezenet/: SqueezeNet.cpp  SqueezeNet.h
src/classifier/classifiers/: Classifier.cpp
src/classifier/classifiers/mobilenet/: Mobilenet.cpp
src/common/: Singleton.h  common.cpp  common.h
src/face/: FaceEngine.cpp  FaceEngine.h
src/face/aligner/: FaceAligner.cpp  FaceAligner.h
src/face/database/: FaceDatabase.cpp  FaceDatabase.h
src/face/database/stream/: FileSystem.cpp  FileSystem.h
src/face/detector/: Detector.cpp  Detector.h
src/face/detector/anticov/: AntiCovFace.cpp  AntiCovFace.h
src/face/detector/centerface/: CenterFace.cpp  CenterFace.h
src/face/detector/mtcnn/: MtcnnFace.cpp  MtcnnFace.h
src/face/detector/retinaface/: RetinaFace.cpp  RetinaFace.h  RetinaFace2.cpp  RetinaFace2.h
src/face/detector/scrfd/: Scrfd.cpp  Scrfd.h
src/face/landmarker/: LandMarker.cpp  LandMarker.h
src/face/landmarker/insightface/: InsightfaceLandMarker.cpp  InsightfaceLandMarker.h
src/face/landmarker/zqlandmarker/: ZQLandMarker.cpp  ZQLandMarker.h
src/face/living/: FaceAntiSpoofing.cpp  FaceAntiSpoofing.h
src/face/living/live/: LiveDetector.cpp  LiveDetector.h
src/face/recognizer/: Recognizer.cpp  Recognizer.h
src/face/recognizer/mobilefacenet/: MobileFacenet.cpp  MobileFacenet.h
src/face/tracker/: Tracker.cpp  Tracker.h
src/object/: ObjectEngine.cpp  ObjectEngine.h
src/object/detectors/: ObjectDetector.cpp  ObjectDetector.h
src/object/detectors/mobilenetssd/: MobilenetSSD.cpp  MobilenetSSD.h
src/object/detectors/nanodet/: NanoDet.cpp  NanoDet.h
src/object/detectors/yolov4/: yolov4.cpp  yolov4.h
src/object/detectors/yolov5/: yolov5.cpp  yolov5.h
src/ocr/: OcrEngine.cpp  OcrEngine.h
src/ocr/detectors/: TextDetector.cpp  TextDetector.h
src/ocr/detectors/dbnet/: DBNet.cpp  DBNet.h
src/ocr/recognizers/: TextRecognizer.cpp  TextRecognizer.h
src/ocr/recognizers/crnn/: CRNNNet.cpp  CRNNNet.h
src/ocr/utils/: ZUtil.cpp  ZUtil.h  clipper.cpp
src/pose/: PoseEngine.cpp  PoseEngine.h
src/pose/detectors/: PoseDetector.cpp  PoseDetector.h
src/pose/detectors/lightopenpose/: LightOpenPose.cpp  LightOpenPose.h
src/pose/detectors/simplepose/: SimplePose.cpp  SimplePose.h
src/segment/: SegmentEngine.cpp  SegmentEngine.h
src/segment/detectors/: SegmentDetector.cpp  SegmentDetector.h
src/segment/detectors/mobilenetv3/: MobileNetV3Seg.cpp  MobileNetV3Seg.h
src/segment/detectors/yolact/: Yolact.cpp  Yolact.h
src/utility/: VisionTools.cpp  VisionTools.h
